OpenJMLTest/testfiles/escRecursiveInvariant2/expected
testfiles\escRecursiveInvariant2\RecursiveInvariant2.java:4: error: Recursive attempt to assert or assume invariants - use pure helper methods: RecursiveInvariant2
    //@ public invariant m();
                          ^
Proving methods in RecursiveInvariant2
Starting proof of RecursiveInvariant2.RecursiveInvariant2() with prover !!!!
Feasibility check - end of preconditions : OK
Feasibility check - at program exit : OK
Completed proof of RecursiveInvariant2.RecursiveInvariant2() with prover !!!! - no warnings
Starting proof of RecursiveInvariant2.m() with prover !!!!
Feasibility check - end of preconditions : OK
Feasibility check - at program exit : OK
Completed proof of RecursiveInvariant2.m() with prover !!!! - no warnings
Starting proof of RecursiveInvariant2.t() with prover !!!!
Feasibility check - end of preconditions : OK
Feasibility check - at program exit : OK
Completed proof of RecursiveInvariant2.t() with prover !!!! - no warnings
Completed proving methods in RecursiveInvariant2
1 error
